<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/char_list_item_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/char_list_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/char_list_item_title"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="150dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/char_list_item_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/char_list_item_subtitle"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/char_list_item_uuid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="80dp"
        android:text="@string/char_list_item_uuid"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/char_list_item_descriptor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="250dp"
        android:text="@string/char_list_item_descriptor"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/char_list_item_props"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:text="@string/char_list_item_props"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>