<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/log_item_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/log_item_msgtype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/device_list_item_name"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="150dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/log_item_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/device_list_item_signal"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/log_item_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/device_list_item_mac"
            android:textSize="12sp" />

    </LinearLayout>

</RelativeLayout>